fix: move burger to left on 15px to show it nicelly with scrollbar

--- a/index.css
+++ b/index.css
@@ -2537,7 +2537,7 @@ section {
 }
 @media (max-width: 1000px) {
   .burger {
-    right: 10px;
+    right: 25px;
   }
 }
 @media (max-width: 870px) {
